--- a/bridge/iOS-Tests/iOS-Tests.csproj
+++ b/bridge/iOS-Tests/iOS-Tests.csproj
@@ -104,7 +104,7 @@
   <ItemGroup>
     <ProjectReference Include="..\NearBridge\NearBridge.csproj">
       <Project>{CFCA42F7-17CF-4B06-A479-4DF17C4B135F}</Project>
-      <Name>NearBridge</Name>
+      <Name>XamarinBridge.iOS</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\XamarinBridge.PCL\XamarinBridge.PCL.csproj">
