--- a/bridge/iOS-Tests/iOS-Tests.csproj
+++ b/bridge/iOS-Tests/iOS-Tests.csproj
@@ -85,8 +85,14 @@
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
     <Reference Include="MonoTouch.NUnitLite" />
-    <Reference Include="NeariOSBind">
-      <HintPath>..\NearBridge\bin\Debug\NeariOSBind.dll</HintPath>
+    <Reference Include="NearIT.iOS.2.10">
+      <HintPath>..\..\..\Xamarin-Binding\NearIT.iOS\NearIT.iOS\bin\Debug\NearIT.iOS.2.10.dll</HintPath>
+    </Reference>
+    <Reference Include="XamarinBridge.iOS">
+      <HintPath>..\XamarinBridge.iOS\bin\Debug\XamarinBridge.iOS.dll</HintPath>
+    </Reference>
+    <Reference Include="XamarinBridge.PCL">
+      <HintPath>..\XamarinBridge.PCL\bin\Debug\XamarinBridge.PCL.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -100,18 +106,6 @@
     <Compile Include="Main.cs" />
     <Compile Include="UnitTestAppDelegate.cs" />
     <Compile Include="MyTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\NearBridge\NearBridge.csproj">
-      <Project>{CFCA42F7-17CF-4B06-A479-4DF17C4B135F}</Project>
-      <Name>XamarinBridge.iOS</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\XamarinBridge.PCL\XamarinBridge.PCL.csproj">
-      <Project>{A44F7082-2621-4EC9-94CC-CE6B22D303E8}</Project>
-      <Name>XamarinBridge.PCL</Name>
-      <Private>False</Private>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
