--- a/sample/Sample.iOS/Sample.iOS.csproj
+++ b/sample/Sample.iOS/Sample.iOS.csproj
@@ -149,6 +149,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="Xamarin.NearIT.iOS">
+      <Version>2.10.0-rc1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sample\Sample.csproj">
