--- a/sample/Sample/Sample.csproj
+++ b/sample/Sample/Sample.csproj
@@ -11,5 +11,6 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="Xamarin.NearIT.PCL" Version="2.10.0" />
   </ItemGroup>
 </Project>
