--- a/sample/Sample.Android/Properties/AndroidManifest.xml
+++ b/sample/Sample.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.nearit.nitbsample.Sample">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-    <application android:label="Sample.Android">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.nearit.nitbsample.Sample.Sample_Android">
+    <uses-sdk android:minSdkVersion="10" />
+    <application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name">
     </application>
 </manifest>
