--- a/bridge/Droid/XamarinBridge.Droid/XamarinBridge.Droid.csproj
+++ b/bridge/Droid/XamarinBridge.Droid/XamarinBridge.Droid.csproj
@@ -27,7 +27,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>None</AndroidLinkMode>
-    <AndroidSupportedAbis>arm64-v8a;armeabi;armeabi-v7a;x86</AndroidSupportedAbis>
     <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -135,15 +134,6 @@
     <Reference Include="Xamarin.GooglePlayServices.Location">
       <HintPath>..\..\packages\Xamarin.GooglePlayServices.Location.60.1142.1\lib\MonoAndroid80\Xamarin.GooglePlayServices.Location.dll</HintPath>
     </Reference>
-    <Reference Include="AltBeaconBinding">
-      <HintPath>..\..\..\..\AltBeaconBinding\AltBeaconBinding\bin\Debug\AltBeaconBinding.dll</HintPath>
-    </Reference>
-    <Reference Include="GoogleServices">
-      <HintPath>..\..\..\..\GoogleServicesBinding\GoogleServicesBinding\bin\Debug\GoogleServices.dll</HintPath>
-    </Reference>
-    <Reference Include="NearIT.Android">
-      <HintPath>..\..\..\..\Xamarin-Binding\NearIT.Android\NearIT.Android\bin\Debug\NearIT.Android.dll</HintPath>
-    </Reference>
     <Reference Include="FormsViewGroup">
       <HintPath>..\..\packages\Xamarin.Forms.3.3.0.967583\lib\MonoAndroid10\FormsViewGroup.dll</HintPath>
     </Reference>
@@ -158,6 +148,18 @@
     </Reference>
     <Reference Include="Xamarin.Forms.Xaml">
       <HintPath>..\..\packages\Xamarin.Forms.3.3.0.967583\lib\MonoAndroid10\Xamarin.Forms.Xaml.dll</HintPath>
+    </Reference>
+    <Reference Include="AltBeaconBinding">
+      <HintPath>..\..\..\..\Xamarin-Binding\NearIT.Android\NearIT.Android\bin\Release\AltBeaconBinding.dll</HintPath>
+    </Reference>
+    <Reference Include="NearIT.Android.Binding.2.12.1">
+      <HintPath>..\..\..\..\Xamarin-Binding\NearIT.Android\NearIT.Android\bin\Release\NearIT.Android.Binding.2.12.1.dll</HintPath>
+    </Reference>
+    <Reference Include="OrpheusBindings">
+      <HintPath>..\..\..\..\Xamarin-Binding\NearIT.Android\NearIT.Android\bin\Release\OrpheusBindings.dll</HintPath>
+    </Reference>
+    <Reference Include="GoogleServices">
+      <HintPath>..\..\..\..\Xamarin-Binding\NearIT.Android\NearIT.Android\bin\Release\GoogleServices.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
